<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="key_0" translatable="false">0</string>
	<string name="key_1" translatable="false">1</string>
	<string name="app_name" translatable="false">Gasteizko Margolariak</string>
	<string name="app_cdesc" translatable="false"> </string>
	<string name="arrow_left" translatable="false">&lt;</string>
	<string name="arrow_right" translatable="false">&gt;</string>
	<string name="menu_home">Inicio</string>
	<string name="menu_lablanca">La Blanca</string>
	<string name="menu_lablanca_schedule">Programa de fiestas</string>
	<string name="menu_lablanca_gm_schedule">Programa Margolari</string>
	<string name="menu_activities">Actividades</string>
	<string name="menu_blog">Blog</string>
	<string name="menu_gallery">Galería</string>
	<string name="menu_settings">Preferencias</string>
	<string name="tutorial_menu">Toca el icono de Margolariak o desliza la pantalla hacia la derecha para ver el menú.</string>
	<string name="tutorial_content">Toca cualquier entrada para ir a la sección correspondiente.</string>
	<string name="tutorial_button">Entendido</string>
	<string name="schedule_filter">Buscar&#8230;</string>
	<string name="schedule_close">Cerrar</string>
	<string name="schedule_host">Organiza %1$s</string>
	<string name="schedule_sponsor">Patrocina %1$s</string>
	<string name="schedule_osm">® Colaboradores OpenStreetMap</string>
	<string name="today">Hoy</string>
	<string name="tomorrow">Mañana</string>
	<string name="blog_pager_previous" translatable="false">&lt;</string>
	<string name="blog_pager_next" translatable="false">&gt;</string>
	<string name="home_section_around">Cerca de mi</string>
	<string name="home_section_location">Encuéntranos</string>
	<string name="home_section_location_text_0">¡Gasteizko Margolariak está cerca!</string>
	<string name="home_section_social">Síguenos</string>
	<string name="settings_notification">Notificaciones</string>
	<string name="settings_notification_on">Recibir notificaciones</string>
	<string name="settings_notification_off">No recibir notificaciones</string>
	<string name="social_phone" translatable="false">Phone</string>
	<string name="social_facebook" translatable="false">Facebook</string>
	<string name="social_mail" translatable="false">e-mail</string>
	<string name="social_whatsapp" translatable="false">Whatsapp</string>
	<string name="social_twitter" translatable="false">Twitter</string>
	<string name="social_googleplus" translatable="false">Google+</string>
	<string name="social_youtube" translatable="false">Youtube</string>
	<string name="social_instagram" translatable="false">Instagram</string>
	<string name="social_phone_link" translatable="false">tel:+34637140371</string>
	<string name="social_mail_link" translatable="false">mailto:gasteizkomargolariak@gmail.com</string>
	<string name="social_whatsapp_link" translatable="false">smsto:+34637140371</string>
	<string name="social_whatsapp_package" translatable="false">com.whatsapp</string>
	<string name="social_whatsapp_chat" translatable="false">chat</string>
	<string name="social_facebook_link" translatable="false">http://facebook.com/gmargolariak</string>
	<string name="social_twitter_link" translatable="false">http://twitter.com/gmargolariak</string>
	<string name="social_googleplus_link" translatable="false">https://plus.google.com/106661466029005469492</string>
	<string name="social_youtube_link" translatable="false">https://www.youtube.com/user/GasteizkoMargolariak</string>
	<string name="social_instagram_link" translatable="false">https://instagram.com/gmargolariak/</string>
	<string name="social_whatsapp_error">Error de conexión con Whatsapp. Está instalado?</string>
	<string name="notification_close">Cerrar</string>
	<string name="dialog_sync_title">Sincronizando</string>
	<string name="dialog_sync_failed_title">Error de sincronización</string>
	<string name="dialog_sync_failed_text">No se pudierdon descargar los contenidos\n\nAsegúrate de que dispones de conexión a internet e inténtalo de nuevo.</string>
	<string name="dialog_sync_failed_close">Cerrar</string>
	<string name="activity_city">Cudad:</string>
	<string name="activity_future">Próximas actividades</string>
	<string name="activity_no_future">No hay actividades planeadas proximamanete. Cuando organicemos algo, aparecera aquí.</string>
	<string name="activity_past">Actividades pasadas</string>
	<string name="activity_price">Precio:</string>
	<string name="activity_schedule">Itinerario</string>
	<string name="comment_name">Nombre…</string>
	<string name="comment_send">Publicar</string>
	<string name="comment_text">Comentario…</string>
	<string name="comment_toast_text">Introduce un comentario</string>
	<string name="comment_toast_user">Introduce un nombre</string>
	<string name="comment_your_comment">Tu comentario</string>
	<plurals name="comment_comments">
		<item quantity="one">%1$d comentario</item>
		<item quantity="other">%1$d comentarios</item>
	</plurals>
	<string name="dialog_sync_text_0">Contactando con Don Margolo&#8230;</string>
	<string name="dialog_sync_text_1">Arrancando la furgo&#8230;</string>
	<string name="dialog_sync_text_2">Preparando kalimotxos&#8230;</string>
	<string name="dialog_sync_text_3">Tú eres el piloto</string>
	<string name="dialog_sync_text_4">Afinando la tuba&#8230;</string>
	<string name="dialog_sync_text_5">Margolari camina pa\'lante, margolari camina pa\'trás.</string>
	<string name="dialog_sync_text_6">Ari ari ari!</string>
	<string name="dialog_sync_text_7">Llegando tarde…</string>
	<string name="dialog_sync_text_8">¿Cabe más gente en el Foro Margolari?</string>
	<string name="dialog_sync_text_9">Arreglando el tirador de cerveza...</string>
	<string name="dialog_sync_text_10">Descorchando botellas...</string>
	<string name="dialog_sync_text_11">Repartiendo pulseras...</string>
	<string name="dialog_sync_text_12">Pintando las fiestas...</string>
	<string name="dialog_sync_text_13">Desplegando pancarta...</string>
	<string name="gallery_albums">Albums</string>
	<string name="gallery_upload">Subir fotos</string>
	<string name="gallery_upload_button">Subir</string>
	<string name="gallery_upload_text">¿Tienes fotografías? ¡Ayudanos a construir esta galería!</string>
	<plurals name="gallery_photo_count">
		<item quantity="one">%1$d foto</item>
		<item quantity="other">%1$d fotos</item>
	</plurals>
	<string name="home_section_activities_future">Proximas actividades</string>
	<string name="home_section_gmschedule">Programa Margolari</string>
	<string name="home_section_location_text_short" tools:ignore="PluralsCandidate">¡Están a solo %1$d metros de ti! (Unos %2$d minutos andando)</string>
	<string name="home_section_location_text_long">¡Están a solo %1$s kilometros de ti!</string>
	<string name="home_section_location_text_calculating">Calculando distancia…</string>
	<string name="lablanca_date_august">%1$s de agosto</string>
	<string name="lablanca_date_july">%1$s de julio</string>
	<string name="lablanca_prices">Precios</string>
	<string name="lablanca_prices_days">Días sueltos</string>
	<string name="lablanca_prices_pack">Packs</string>
	<string name="lablanca_schedule">Programa</string>
	<string name="lablanca_schedule_city">Programa de Fiestas</string>
	<string name="lablanca_schedule_gm">Programa Margolari</string>
	<string name="lablanca_title">La Blanca</string>
	<string name="menu_location">Encuentranos</string>
	<string name="notification_action_gmschedule">Ver programa Margolari</string>
	<string name="schedule_later">Siguiente</string>
	<string name="schedule_month_august">Agosto</string>
	<string name="schedule_month_july">Julio</string>
	<string name="schedule_now">Ahora</string>
	<string name="section_title_blog">Blog</string>
	<string name="home_section_blog">Últimos posts</string>
	<string name="home_section_cityschedule">Programa de fiestas</string>
	<string name="home_section_gallery">Últimas fotos</string>
	<string name="home_section_lablanca">La Blanca</string>
	<string name="home_section_activities_past">Últimas actividades</string>
	<string name="notification_action_activities">Ver actividades</string>
	<string name="notification_action_blog">Abrir blog</string>
	<string name="notification_action_cityschedule">Programa de fiestas</string>
	<string name="notification_action_gallery">Abrir galería</string>
	<string name="notification_action_lablanca">Abrir La Blanca</string>
	<string name="notification_action_location">Ver localización</string>
	<string name="price">Precio: %1$d €</string>
	<string name="settings_about">Sobre nosotros</string>
	<string name="settings_license">Licencia</string>
	<string name="settings_license_content"><![CDATA[Copyright 2016 Iñigo Valentin<br/><br/>This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation.<br/><br/>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details at http://www.gnu.org/licenses/.<br/><br/>The name "Gasteizko Margolariak" and its logotype are property of Gasteizko Margolariak.<br/><br/><br/><div style="background-color:#bbbbbb;padding:6px;border-radius:5px;border-style:solid;border-width:2px;border-color:#333333;text-align:center;">You can get the source code for this project at <a href="https://github.com/Seavenois/GM">Github</a></div>]]></string>
	<string name="settings_privacy">Privacidad</string>
	<string name="settings_privacy_content"><![CDATA[En Gasteizko Margolariak respetamos tu privacidad. No guardamos NINGÚN dato de nuestros usuarios, incluyendo información personal, localización, hábitos de compra, preferencias sexuales, color favorito, nombre de su primer amor… NINGUNO.<br/><br/>Para que nos creas, te explicamos lo que sí almacenamos:<br/><br/><ul><li>Un código de usuario, generado aleatoriamente, único para tu dispositivo. Esto es necesario para sincronizar la aplicación con nuestra base de datos y poder descargar los últimos posts, actividades… Pero esta hecho de tal manera que no podamos identificarte como persona a través de ese código.</li><li>Al publicar un comentario en una entrada o una foto, guardaremos temporalmente (120 minutos, lo justo para procesar información) tu dirección IP. Esto nos es súper útil para saber cuántas personas diferentes publican comentarios, y tampoco nos permite identificarte como persona.</li></ul>]]></string>
	<string name="settings_transparency">Transparencia</string>
	<string name="preferences_sync">Sincronización</string>
	<string name="preferences_sync_sync">Sincronización en segundo plano</string>
	<string name="preferences_sync_sync_on">Sincronización activada</string>
	<string name="preferences_sync_notifications">Notificaciones</string>
	<string name="preferences_sync_notifications_on">Se recibirán notificaciones</string>
	<string name="preferences_sync_usage">Uso de datos</string>
	<string name="preferences_info">Informacion</string>
	<string name="preferences_info_version">Versión de la aplicación</string>
	<string name="preferences_info_source_summary">Ojear el código fuente en Github</string>
	<string name="preferences_info_feedback">Feedback</string>
	<string name="preferences_info_feedback_summary">Enviar información anónima al desarrollador</string>
	<string name="preferences_info_source">Código fuente</string>
</resources>