<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/section"
    android:orientation="vertical"
    android:paddingBottom="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="7dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sync_failed_title"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sync_failed_text"
            android:background="@drawable/entry"
            android:padding="7dp"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

    </LinearLayout>

    <Button
        android:id="@+id/bt_dialog_sync_failed_close"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/dialog_sync_failed_close"
        android:background="@drawable/button_selector"
        android:textStyle="bold"
        android:textColor="@color/input_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>