<?xml version="1.0" encoding="utf-8"?>
<com.ivalentin.margolariak.CustomScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_app"
    android:padding="7dp"
    tools:ignore="Overdraw">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/section"
            android:padding="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lablanca_title"
                android:id="@+id/textView10"
                android:textStyle="bold"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/entry"
                android:padding="7dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_lablanca_header"
                    android:contentDescription="@string/app_cdesc"
                    android:layout_margin="3dp"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center_horizontal"
                    android:maxHeight="130dp"/>

                <WebView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/wv_lablanca_header"
                    android:padding="7dp"
                    android:layout_marginBottom="7dp"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/section"
            android:padding="7dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lablanca_schedule"
                android:textStyle="bold"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/entry"
                android:padding="7dp">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/lablanca_schedule_city"
                    android:id="@+id/bt_lablanca_schedule_city"
                    android:background="@drawable/button_selector"
                    android:textColor="@color/input_button_color"
                    android:textStyle="bold"
                    android:layout_margin="6dp"
                    android:layout_weight=".5"
                    tools:ignore="ButtonStyle"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/lablanca_schedule_gm"
                    android:id="@+id/bt_lablanca_schedule_gm"
                    android:background="@drawable/button_selector"
                    android:textColor="@color/input_button_color"
                    android:textStyle="bold"
                    android:layout_margin="6dp"
                    android:layout_weight=".5"
                    tools:ignore="ButtonStyle"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/section"
            android:layout_marginTop="12dp"
            android:padding="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lablanca_prices"
                android:textStyle="bold"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/entry"
                android:padding="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lablanca_prices_days"
                    android:layout_marginBottom="15dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/ll_lablanca_prices_days_list">
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/entry"
                android:padding="7dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lablanca_prices_pack"
                    android:layout_marginBottom="15dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/ll_lablanca_prices_packs_list"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</com.ivalentin.margolariak.CustomScrollView>