<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_menu"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="2dp">

        <!-- Button to open slider menu -->

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/iv_logo"
            android:src="@drawable/ic_launcher"
            android:adjustViewBounds="true"
            android:layout_weight=".2"
            android:maxHeight="45dp"
            android:maxWidth="45dp"
            android:padding="1dp"/>

        <!-- Layout with the app title and current section -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".8"
            android:gravity="center"
            android:orientation="vertical" >

            <!-- App name. Remains unchanged -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/menu_entry"/>

            <!-- Section title -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/menu_settings"
                android:textSize="20sp"
                android:textColor="@color/menu_entry"/>

        </LinearLayout>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_menu_revert"
            android:contentDescription="@string/tutorial_menu"
            android:onClick="finish();"
            android:layout_weight=".2"
            android:id="@+id/bt_menu"
            app:srcCompat="@android:drawable/ic_menu_revert"
            android:background="#00000000"/>

        <ProgressBar
            android:id="@+id/pb_sync"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight=".2"
            android:visibility="gone"
            android:maxHeight="40dp"
            android:maxWidth="40dp"/>

    </LinearLayout>

    <!-- The part where the fragments will be loaded -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_app">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ScrollViewSize"
            android:background="@color/background_app"
            android:orientation="vertical">

            <TextView
                android:text="@string/preferences_sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/background_menu"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ll_settings_sync"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".15">

                    <TextView
                        android:text="@string/preferences_sync_sync"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        />

                    <TextView
                        android:text="@string/preferences_sync_sync_on"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_settings_sync"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>

                <CheckBox
                    android:layout_height="50dp"
                    android:id="@+id/cb_settings_sync"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_weight=".85"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ll_settings_notifications"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".15">

                    <TextView
                        android:text="@string/preferences_sync_notifications"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        />

                    <TextView
                        android:text="@string/preferences_sync_notifications_on"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_settings_notifications"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>

                <CheckBox
                    android:layout_height="50dp"
                    android:id="@+id/cb_settings_notifications"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_weight=".85"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textAlignment="center"/>

            </LinearLayout>

            <TextView
                android:text="@string/preferences_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/background_menu"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ll_settings_version"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:text="@string/preferences_info_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_weight=".15"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_settings_version"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight=".15"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ll_settings_source"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:text="@string/preferences_info_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_weight=".15"/>

                <TextView
                    android:text="@string/preferences_info_source_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight=".15"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ll_settings_feedback"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:text="@string/preferences_info_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_weight=".15"/>

                <TextView
                    android:text="@string/preferences_info_feedback_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight=".15"/>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>

